--- a/ineat_e/src/main/webapp/resources/css/nav.css
+++ b/ineat_e/src/main/webapp/resources/css/nav.css
@@ -33,3 +33,27 @@
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px
 		rgba(255, 165, 0, 0.4)
 }
+
+<!--
+로그인 모달창 css-->
+.form-control:focus {
+   border: solid orange 2px;
+   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px
+      rgba(255, 165, 0, 0.4)
+}
+
+.btn-w {
+   width: 100%;
+   margin-bottom: 0.5rem;
+}
+
+.size {
+   font-size: 0.8rem;
+   display: inline;
+   text-align: center;
+}
+
+.w3-button:hover {
+   color: #000 !important;
+   background-color: rgba(253, 153, 0, 0.6) !important;
+}
